adicao das bandeiras das barracas no index

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="section-barraca-1">
                 <h1 class="titulo-nunito">Gastronomia ~ Barracas</h1>
                 <p>
-                    A Expo Assis nasceu com a Festa das Nações, no ano de 1977,
+                    A Expo Assis nasceu com a Festa das Nações no ano de 1977,
                     sendo a primeira festa, realizada na Avenida Tupãssi, em frente ao Esporte São Luiz e Casa
                     Leão. Uma festa com comidas típicas das famílias de pioneiros que vieram abrir a última
                     fronteira agrícola do Paraná. Natos ou descendentes de Portugueses, Espanhóis, Italianos,
@@ -87,7 +87,13 @@
                     que tem um sabor especial.
                 </p>
                 <div class="container-flag">
+                    <img class="box-flag" src="img/icon/germany.svg" alt="">
                     <img class="box-flag" src="img/icon/brazil.svg" alt="">
+                    <img class="box-flag" src="img/icon/spain.svg" alt="">
+                    <img class="box-flag" src="img/icon/france.svg" alt="">
+                    <img class="box-flag" src="img/icon/italy.svg" alt="">
+                    <img class="box-flag" src="img/icon/japan.svg" alt="">
+                    <img class="box-flag" src="img/icon/portugal.svg" alt="">
                 </div>
             </div>
         </section>
