ajuste de layout e inserçao de expositores

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section id="section-expo">
             <div class="section-expo-1">
                 <h1 class="titulo-nunito">A EXPO</h1>
-                <p>Este é um dos maiores eventos que acontece este
+                <p class="paragraph-style-1">Este é um dos maiores eventos que acontece este
                     ano no Oeste do Paraná. No seu 53° Aniversário, Assis Chateaubriand, Estado do Paraná,
                     é hoje um polo microrregional e tem destaque nacional na produção de grãos. A ponte
                     ligando o Paraná com o Mato Grosso, as oportunidades surgidas com o Mercosul e a
@@ -94,6 +94,41 @@
                     <img class="box-flag" src="img/icon/italy.svg" alt="">
                     <img class="box-flag" src="img/icon/japan.svg" alt="">
                     <img class="box-flag" src="img/icon/portugal.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <section id="section-expositores">
+            <div class="section-expositores-1">
+                <h1 class="titulo-nunito">31 Exposição Comercial e Cultural</h1>
+                <p>
+                    Iniciada há anos, no ano de 1984 na ocasião da 6.a Festa das
+                    Nações, a Exposição Comercial e Industrial é uma grande atração do Parque de
+                    Exposição. O entusiasmo dos empresários tem sido grande, pela comercialização
+                    realizada, não só de máquinas e implementos agrícolas, como também veículos leves e
+                    pesados, móveis e equipamentos para pecuária de leite e de corte, dentre outros produtos
+                    relacionados diretamente com a economia de Assis Chateaubriand e região.
+                </p>
+            </div>
+            <div class="section-expositores-2">
+                <h2 class="titulo-nunito">Os produtos expostos na área de indústria e comércio são:</h2>
+                <div class="flex wrap justify-content-around">
+                    <div class="box-expositores"><p>Máquinas Agrícolas</p></div>
+                    <div class="box-expositores"><p>Veículos e Peças</p></div>
+                    <div class="box-expositores"><p>Materiais de Construção</p></div>
+                    <div class="box-expositores"><p>Eletrodomésticos</p></div>
+                    <div class="box-expositores"><p>Cereais</p></div>
+                    <div class="box-expositores"><p>Brinquedos e Diversão</p></div>
+                    <div class="box-expositores"><p>Informática</p></div>
+                    <div class="box-expositores"><p>Móveis</p></div>
+                    <div class="box-expositores"><p>Decoração</p></div>
+                    <div class="box-expositores"><p>Roupas e Enxovais</p></div>
+                    <div class="box-expositores"><p>Alimentos</p></div>
+                    <div class="box-expositores"><p>Artesanato em Geral</p></div>
+                    <div class="box-expositores"><p>Cooperativas</p></div>
+                    <div class="box-expositores"><p>Imprensa</p></div>
+                    <div class="box-expositores"><p>Prestação de Serviços</p></div>
+                    <div class="box-expositores"><p>Bijuterias</p></div>
+                    <div class="box-expositores"><p>Cooperativas de Crédito</p></div>
                 </div>
             </div>
         </section>
