adicionado opcao de clicar nos expositores

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </section>
         <section id="section-expositores">
             <div class="section-expositores-1">
-                <h1 class="titulo-nunito">31 Exposição Comercial e Cultural</h1>
+                <h1 class="titulo-nunito">31° Exposição Comercial e Cultural</h1>
                 <p>
                     Iniciada há anos, no ano de 1984 na ocasião da 6.a Festa das
                     Nações, a Exposição Comercial e Industrial é uma grande atração do Parque de
@@ -112,31 +112,34 @@
             <div class="section-expositores-2">
                 <h2 class="titulo-nunito">Os produtos expostos na área de indústria e comércio são:</h2>
                 <div class="flex wrap justify-content-around">
-                    <div class="box-expositores"><p>Máquinas Agrícolas</p></div>
-                    <div class="box-expositores"><p>Veículos e Peças</p></div>
-                    <div class="box-expositores"><p>Materiais de Construção</p></div>
-                    <div class="box-expositores"><p>Eletrodomésticos</p></div>
-                    <div class="box-expositores"><p>Cereais</p></div>
-                    <div class="box-expositores"><p>Brinquedos e Diversão</p></div>
-                    <div class="box-expositores"><p>Informática</p></div>
-                    <div class="box-expositores"><p>Móveis</p></div>
-                    <div class="box-expositores"><p>Decoração</p></div>
-                    <div class="box-expositores"><p>Roupas e Enxovais</p></div>
-                    <div class="box-expositores"><p>Alimentos</p></div>
-                    <div class="box-expositores"><p>Artesanato em Geral</p></div>
-                    <div class="box-expositores"><p>Cooperativas</p></div>
-                    <div class="box-expositores"><p>Imprensa</p></div>
-                    <div class="box-expositores"><p>Prestação de Serviços</p></div>
-                    <div class="box-expositores"><p>Bijuterias</p></div>
-                    <div class="box-expositores"><p>Cooperativas de Crédito</p></div>
+                    <a href="" class="box-expositores">Máquinas Agrícolas</a>
+                    <a href="" class="box-expositores">Veículos e Peças</a>
+                    <a href="" class="box-expositores">Materiais de Construção</a>
+                    <a href="" class="box-expositores">Eletrodomésticos</a>
+                    <a href="" class="box-expositores">Cereais</a>
+                    <a href="" class="box-expositores">Brinquedos e Diversão</a>
+                    <a href="" class="box-expositores">Informática</a>
+                    <a href="" class="box-expositores">Móveis</a>
+                    <a href="" class="box-expositores">Decoração</a>
+                    <a href="" class="box-expositores">Roupas e Enxovais</a>
+                    <a href="" class="box-expositores">Alimentos</a>
+                    <a href="" class="box-expositores">Artesanato em Geral</a>
+                    <a href="" class="box-expositores">Cooperativas</a>
+                    <a href="" class="box-expositores">Imprensa</a>
+                    <a href="" class="box-expositores">Prestação de Serviços</a>
+                    <a href="" class="box-expositores">Bijuterias</a>
+                    <a href="" class="box-expositores">Cooperativas de Crédito</a>
                 </div>
+                <div class="flex flex-center"><a class="box-expositores" href="">Pesquisar Produtos</a></div>
             </div>
         </section>
     </main>
 
     <!-- FOOTER -->
     <footer class="flex">
-
+        <section class="desenvolvimento">
+            <p>Desenvolvido por: Ítalo Rodrigues e Nathalia Jorge.</p>
+        </section>
     </footer>
 </body>
 
