ajustes secao expositores

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     Japoneses e Alemães. Gente vinda de todos os estados do Brasil, para compor um bonito
                     quadro de etnias, fazendo nascer um importante pedaço da nação.
                 </p>
-                <p>
+                <p class="mg">
                     As Barracas compostas, que ainda insistimos em chamá-las assim, e
                     não de restaurantes, compõe a essência da Expo Assis, sendo: Barraca Alemã, Barraca
                     Americana, Barraca Brasileira, Barraca Espanhola, Barraca Italiana , Barraca Japonesa e
@@ -111,7 +111,7 @@
             </div>
             <div class="section-expositores-2">
                 <h2 class="titulo-nunito">Os produtos expostos na área de indústria e comércio são:</h2>
-                <div class="flex wrap justify-content-around">
+                <div class="flex wrap justify-content-evenly">
                     <a href="" class="box-expositores">Máquinas Agrícolas</a>
                     <a href="" class="box-expositores">Veículos e Peças</a>
                     <a href="" class="box-expositores">Materiais de Construção</a>
@@ -130,7 +130,11 @@
                     <a href="" class="box-expositores">Bijuterias</a>
                     <a href="" class="box-expositores">Cooperativas de Crédito</a>
                 </div>
-                <div class="flex flex-center"><a class="box-expositores" href="">Pesquisar Produtos</a></div>
+                <div class="flex column flex-center">
+                    <span class="line"></span>
+                    <a class="box-expositores box-colored" href="" style="color:#84239c;font-size: 1.5rem;">Pesquisar Produtos</a>
+                    <span class="line"></span>
+                </div>
             </div>
         </section>
     </main>
