criacao arquivos barracas; implementacao alema; adpatacao index

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <!-- menus -->
             <section class="flex" id="menu">
                 <ul class="flex">
-                    <li class="w-100"><a class="cw" href="">Página inicial</a></li>
-                    <li class="w-100"><a class="cw" href="">Barracas</a></li>
-                    <li class="w-100"><a class="cw" href="">Expositores</a></li>
+                    <li class="w-100"><a class="cw" href="#section-expo">Expo</a></li>
+                    <li class="w-100"><a class="cw" href="#section-barraca">Barracas</a></li>
+                    <li class="w-100"><a class="cw" href="#section-expositores">Expositores</a></li>
                 </ul>
                 <a class="btn-colaboradores flex" href="">Colaboradores</a>
             </section>
@@ -87,13 +87,33 @@
                     que tem um sabor especial.
                 </p>
                 <div class="container-flag">
-                    <img class="box-flag" src="img/icon/germany.svg" alt="">
-                    <img class="box-flag" src="img/icon/brazil.svg" alt="">
-                    <img class="box-flag" src="img/icon/spain.svg" alt="">
-                    <img class="box-flag" src="img/icon/france.svg" alt="">
-                    <img class="box-flag" src="img/icon/italy.svg" alt="">
-                    <img class="box-flag" src="img/icon/japan.svg" alt="">
-                    <img class="box-flag" src="img/icon/portugal.svg" alt="">
+                    <a class="box-flag" href="src/barraca-alema.html">
+                        <img src="img/icon/germany.svg" alt="">
+                        <p>Alemã</p>
+                    </a>
+                    <a class="box-flag" href="src/barraca-brasileira.html">
+                        <img src="img/icon/brazil.svg" alt="">
+                        <p>Brasileira</p>
+                    </a>
+                    <a class="box-flag" href="src/barraca-espanhola.html">
+                        <img src="img/icon/spain.svg" alt="">
+                        <p>Espanhola</p></a>
+                        <a class="box-flag" href="src/barraca-francesa.html">
+                        <img src="img/icon/france.svg" alt="">
+                        <p>Francesa</p>
+                    </a>
+                    <a class="box-flag" href="src/barraca-italiana.html">
+                        <img src="img/icon/italy.svg" alt="">
+                        <p>Italiana</p>
+                    </a>
+                    <a class="box-flag" href="src/barraca-japonesa.html">
+                        <img src="img/icon/japan.svg" alt="">
+                        <p>Japonesa</p>
+                    </a>
+                    <a class="box-flag" href="src/barraca-portuguesa.html">
+                        <img src="img/icon/portugal.svg" alt="">
+                        <p>Portuguesa</p>
+                    </a>
                 </div>
             </div>
         </section>
