90% complete barraca alema

--- a/src/barraca-alema.html
+++ b/src/barraca-alema.html
@@ -47,7 +47,7 @@
         <section id="section-comidas-container">
             <section class="section-comidas-item">
                 <section class="flex-column-around color-background-white section-menu-alema">
-                    <h5 class="flex-between"><span class="color-title">CHOPP</span><span> R$05,00</span></h5>
+                    <h5 class="flex-between"><span class="color-title">CHOPP</span><span> R$5,00</span></h5>
                     <h5 class="flex-between"><span class="color-title">CHUCRUTE (REPOLHO EM CONSERVA)</span><span>
                             R$10,00</span></h5>
                     <h5 class="flex-between"><span class="color-title">EISBEN (JOELHO DE PORCO)</span><span>
@@ -59,8 +59,58 @@
                     <img class="image-comidas-l" src="../img/chope-imagem-curta-mais.jpg" height="400">
                 </section>
             </section>
+            <section class="section-comidas-item">
+                <section>
+                    <img class="image-comidas-r" src="../img/fried-chicken-250863.jpg" height="400">
+                </section>
+                <section class="flex-column-around color-background-white section-menu-alema">
+                    <h5 class="flex-between"><span class="color-title">CHOPP</span><span> R$5,00</span></h5>
+                    <h5 class="flex-between espacamento"><span class="color-title">BATATA RECHEADA</span><span>
+                            R$15,00</span></h5>
+                    <p class="italico-sm">(Calabresa c/ Bacon, Três Queijos c/ Presunto e Frango)</p>
+                    <h5 class="flex-between"><span class="color-title">BATATA FRITA</span><span> R$15,00</span></h5>
+                    <h5 class="flex-between"><span class="color-title">FRANGO FRITO</span><span> R$20,00</span></h5>
+                    <h5 class="flex-between"><span class="color-title">PORCO C/ MANDIOCA</span><span> R$25,00</span>
+                    </h5>
+                    <h5 class="flex-between"><span class="color-title">ARROZ</span><span> R$5,00</span></h5>
+                    <h5 class="flex-between espacamento"><span class="color-title">SALADA ESPECIAL</span><span>
+                            R$15,00</span></h5>
+                    <p class="italico-sm">(Alface, Repolho, Tomate, Cenoura Ralada, Pepino e Ovo de Codorna em Conserva)
+                    </p>
+                </section>
+            </section>
+
+            <section class="section-comidas-item">
+                <section class="flex-column-around color-background-white section-menu-alema">
+                    <h5 class="text-center color-title">JANTAR TODAS AS NOITES</h5>
+                    <span class="text-center">R$35,00</span>
+                    <p class="italico-sm text-center">(Saladas de tomate e alface, chucrute, cuca, batata frita, Farofa,
+                        eisbein, arroz, feijão, frango frito e costa desossada e recheada)</p>
+                </section>
+                <section>
+                    <img class="image-comidas-l" src="../img/receita-feijoada.jpg" height="400">
+                </section>
+            </section>
+
+            <section class="section-comidas-item">
+                <section>
+                    <img class="image-comidas-r" src="../img/porco-no-rolete.jpg" height="400">
+                </section>
+                <section class="flex-column-around color-background-white section-menu-alema">
+                    <h5 class="text-center color-title">ALMOÇO NO DOMINGO</h5>
+                    <span class="text-center">R$40,00</span>
+                    <p class="italico-sm text-center w-100"> <span class="invisible-font">....................................................................</span> Porco no rolete <span class="invisible-font">....................................................................</span></p>
+                </section>
+            </section>
         </section>
     </main>
+
+    <!-- FOOTER -->
+    <footer class="flex">
+        <section class="desenvolvimento">
+            <p>Desenvolvido por: Ítalo Rodrigues e Nathalia Jorge.</p>
+        </section>
+    </footer>
 </body>
 
 </html>
