--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <!-- menus -->
             <section class="flex" id="menu">
                 <ul class="flex">
-                    <li class="w-100"><a class="cw" href="#section-expo">Expo</a></li>
-                    <li class="w-100"><a class="cw" href="#section-barraca">Barracas</a></li>
-                    <li class="w-100"><a class="cw" href="#section-expositores">Expositores</a></li>
+                    <li class="w-100"><a class="cw item-menu" href="#section-expo">Expo</a></li>
+                    <li class="w-100"><a class="cw item-menu" href="#section-barraca">Barracas</a></li>
+                    <li class="w-100"><a class="cw item-menu" href="#section-expositores">Expositores</a></li>
                 </ul>
                 <a class="btn-colaboradores flex" href="">Colaboradores</a>
             </section>
@@ -50,13 +50,13 @@
         <!-- Set up your HTML -->
         <div class="owl-carousel slider-image">
             <div class="">
-                <img class="" src="img/artista/capa-eduardocosta.jpg" alt="">
+                <img class="" src="img/artista/capa-eduardocosta.png" alt="">
             </div>
             <div class="">
-                <img class="" src="img/artista/capa-racanegra.jpg" alt="">
+                <img class="" src="img/artista/capa-racanegra.png" alt="">
             </div>
             <div class="">
-                <img class="" src="img/artista/capa-cesarmenottiefabiano.jpg" alt="">
+                <img class="" src="img/artista/capa-cesarmenottiefabiano-3.png" alt="">
                 
             </div>
         </div>
